--- a/project09/Breakaway/BreakawayGame.vm
+++ b/project09/Breakaway/BreakawayGame.vm
@@ -39,92 +39,35 @@ push local 1
 not
 not
 if-goto WHILE_END0
-label WHILE_EXP1
-push local 0
-push constant 0
-eq
-not
-if-goto WHILE_END1
-call Keyboard.keyPressed 0
-pop local 0
-push this 1
-call Ball.moveBall 1
+push pointer 0
+call BreakawayGame.update 1
 pop temp 0
-push constant 55
+push pointer 0
+call BreakawayGame.render 1
+pop temp 0
+push constant 60
 call Sys.wait 1
 pop temp 0
-goto WHILE_EXP1
-label WHILE_END1
-push local 0
-push constant 81
-eq
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-push constant 0
-not
-pop local 1
-label IF_FALSE0
-push local 0
-push constant 90
-eq
-if-goto IF_TRUE1
-goto IF_FALSE1
-label IF_TRUE1
-label IF_FALSE1
-push local 0
-push constant 88
-eq
-if-goto IF_TRUE2
-goto IF_FALSE2
-label IF_TRUE2
-label IF_FALSE2
-push local 0
-push constant 131
-eq
-if-goto IF_TRUE3
-goto IF_FALSE3
-label IF_TRUE3
-label IF_FALSE3
-push local 0
-push constant 133
-eq
-if-goto IF_TRUE4
-goto IF_FALSE4
-label IF_TRUE4
-label IF_FALSE4
-push local 0
-push constant 130
-eq
-if-goto IF_TRUE5
-goto IF_FALSE5
-label IF_TRUE5
-label IF_FALSE5
-push local 0
-push constant 132
-eq
-if-goto IF_TRUE6
-goto IF_FALSE6
-label IF_TRUE6
-label IF_FALSE6
-label WHILE_EXP2
-push local 0
-push constant 0
-eq
-not
-not
-if-goto WHILE_END2
-call Keyboard.keyPressed 0
-pop local 0
-push this 1
-call Ball.moveBall 1
-pop temp 0
-push constant 55
-call Sys.wait 1
-pop temp 0
-goto WHILE_EXP2
-label WHILE_END2
 goto WHILE_EXP0
 label WHILE_END0
+push constant 0
+return
+function BreakawayGame.update 0
+push argument 0
+pop pointer 0
+push this 1
+call Ball.moveBall 1
+pop temp 0
+push constant 0
+return
+function BreakawayGame.render 0
+push argument 0
+pop pointer 0
+push this 0
+call PlayArea.clear 1
+pop temp 0
+push this 1
+call Ball.draw 1
+pop temp 0
 push constant 0
 return
