--- a/project09/Breakaway/BreakawayGame.vm
+++ b/project09/Breakaway/BreakawayGame.vm
@@ -71,7 +71,7 @@ call Keyboard.keyPressed 0
 pop this 3
 push constant 0
 return
-function BreakawayGame.update 0
+function BreakawayGame.update 2
 push argument 0
 pop pointer 0
 push this 3
@@ -104,6 +104,51 @@ push this 2
 call Paddle.moveRight 1
 pop temp 0
 label IF_FALSE2
+push this 1
+call Ball.moveBallSim 1
+pop temp 0
+push this 1
+call Ball.getHitbox 1
+pop local 0
+push this 0
+call PlayArea.getHitbox 1
+pop local 1
+push local 0
+call Hitbox.getXLower 1
+push local 1
+call Hitbox.getXLower 1
+lt
+push local 0
+call Hitbox.getXUpper 1
+push local 1
+call Hitbox.getXUpper 1
+gt
+or
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
+push this 1
+call Ball.flipDeltaX 1
+pop temp 0
+label IF_FALSE3
+push local 0
+call Hitbox.getYLower 1
+push local 1
+call Hitbox.getYLower 1
+lt
+push local 0
+call Hitbox.getYUpper 1
+push local 1
+call Hitbox.getYUpper 1
+gt
+or
+if-goto IF_TRUE4
+goto IF_FALSE4
+label IF_TRUE4
+push this 1
+call Ball.flipDeltaY 1
+pop temp 0
+label IF_FALSE4
 push this 1
 call Ball.moveBall 1
 pop temp 0
