--- a/project09/Breakaway/Hitbox.vm
+++ b/project09/Breakaway/Hitbox.vm
@@ -1,5 +1,5 @@
 function Hitbox.new 0
-push constant 5
+push constant 4
 call Memory.alloc 1
 pop pointer 0
 push argument 0
@@ -10,9 +10,15 @@ push argument 2
 pop this 2
 push argument 3
 pop this 3
-push constant 0
-pop this 4
 push pointer 0
+return
+function Hitbox.dispose 0
+push argument 0
+pop pointer 0
+push pointer 0
+call Memory.deAlloc 1
+pop temp 0
+push constant 0
 return
 function Hitbox.update 0
 push argument 0
@@ -26,19 +32,6 @@ pop this 2
 push argument 4
 pop this 3
 push constant 0
-return
-function Hitbox.collisionSwitch 0
-push argument 0
-pop pointer 0
-push this 4
-not
-pop this 4
-push constant 0
-return
-function Hitbox.getCollisionSwitch 0
-push argument 0
-pop pointer 0
-push this 4
 return
 function Hitbox.getXUpper 0
 push argument 0
