--- a/project09/Breakaway/Paddle.vm
+++ b/project09/Breakaway/Paddle.vm
@@ -10,6 +10,8 @@ push argument 2
 pop this 4
 push argument 3
 pop this 5
+push this 1
+pop this 3
 push pointer 0
 call Paddle.draw 1
 pop temp 0
@@ -128,8 +130,6 @@ push this 4
 push constant 2
 call Math.divide 2
 add
-push constant 4
-sub
 call Math.multiply 2
 push constant 4
 push this 2
@@ -137,8 +137,6 @@ push this 4
 push constant 2
 call Math.divide 2
 sub
-push constant 4
-add
 call Math.multiply 2
 push constant 4
 push this 3
@@ -146,8 +144,6 @@ push this 5
 push constant 2
 call Math.divide 2
 add
-push constant 4
-sub
 call Math.multiply 2
 push constant 4
 push this 3
@@ -155,8 +151,6 @@ push this 5
 push constant 2
 call Math.divide 2
 sub
-push constant 4
-add
 call Math.multiply 2
 call Hitbox.update 5
 pop temp 0
@@ -176,8 +170,6 @@ push this 4
 push constant 2
 call Math.divide 2
 add
-push constant 4
-sub
 call Math.multiply 2
 push constant 4
 push this 2
@@ -185,8 +177,6 @@ push this 4
 push constant 2
 call Math.divide 2
 sub
-push constant 4
-add
 call Math.multiply 2
 push constant 4
 push this 3
@@ -194,8 +184,6 @@ push this 5
 push constant 2
 call Math.divide 2
 add
-push constant 4
-sub
 call Math.multiply 2
 push constant 4
 push this 3
@@ -203,8 +191,6 @@ push this 5
 push constant 2
 call Math.divide 2
 sub
-push constant 4
-add
 call Math.multiply 2
 call Hitbox.update 5
 pop temp 0
@@ -229,8 +215,6 @@ push this 4
 push constant 2
 call Math.divide 2
 add
-push constant 4
-sub
 call Math.multiply 2
 push constant 4
 push this 0
@@ -238,8 +222,6 @@ push this 4
 push constant 2
 call Math.divide 2
 sub
-push constant 4
-add
 call Math.multiply 2
 push constant 4
 push this 1
@@ -247,8 +229,6 @@ push this 5
 push constant 2
 call Math.divide 2
 add
-push constant 4
-sub
 call Math.multiply 2
 push constant 4
 push this 1
@@ -256,8 +236,6 @@ push this 5
 push constant 2
 call Math.divide 2
 sub
-push constant 4
-add
 call Math.multiply 2
 call Hitbox.update 5
 pop temp 0
@@ -277,8 +255,6 @@ push this 4
 push constant 2
 call Math.divide 2
 add
-push constant 4
-sub
 call Math.multiply 2
 push constant 4
 push this 0
@@ -286,8 +262,6 @@ push this 4
 push constant 2
 call Math.divide 2
 sub
-push constant 4
-add
 call Math.multiply 2
 push constant 4
 push this 1
@@ -295,8 +269,6 @@ push this 5
 push constant 2
 call Math.divide 2
 add
-push constant 4
-sub
 call Math.multiply 2
 push constant 4
 push this 1
@@ -304,8 +276,6 @@ push this 5
 push constant 2
 call Math.divide 2
 sub
-push constant 4
-add
 call Math.multiply 2
 call Hitbox.update 5
 pop temp 0
