--- a/project09/Breakaway/Brick.vm
+++ b/project09/Breakaway/Brick.vm
@@ -1,5 +1,5 @@
-function Paddle.new 0
-push constant 7
+function Brick.new 0
+push constant 6
 call Memory.alloc 1
 pop pointer 0
 push argument 0
@@ -7,39 +7,39 @@ pop this 0
 push argument 1
 pop this 1
 push argument 2
-pop this 4
+pop this 2
 push argument 3
-pop this 5
-push this 1
 pop this 3
+push argument 4
+pop this 4
 push pointer 0
-call Paddle.draw 1
+call Brick.draw 1
 pop temp 0
-push this 0
-push this 4
+push this 1
+push this 3
 push constant 2
 call Math.divide 2
 sub
-push this 0
-push this 4
+push this 1
+push this 3
 push constant 2
 call Math.divide 2
 add
-push this 1
-push this 5
+push this 2
+push this 4
 push constant 2
 call Math.divide 2
 sub
-push this 1
-push this 5
+push this 2
+push this 4
 push constant 2
 call Math.divide 2
 add
 call Hitbox.new 4
-pop this 6
+pop this 5
 push pointer 0
 return
-function Paddle.dispose 0
+function Brick.dispose 0
 push argument 0
 pop pointer 0
 push pointer 0
@@ -47,60 +47,162 @@ call Memory.deAlloc 1
 pop temp 0
 push constant 0
 return
-function Paddle.draw 0
+function Brick.draw 0
 push argument 0
 pop pointer 0
 push constant 0
 not
 call Screen.setColor 1
 pop temp 0
-push this 0
-push this 4
-push constant 2
-call Math.divide 2
-sub
 push this 1
-push this 5
-push constant 2
-call Math.divide 2
-sub
-push this 0
-push this 4
+push this 3
 push constant 2
 call Math.divide 2
 add
+push constant 363
+gt
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push this 1
-push this 5
+push this 3
+push constant 2
+call Math.divide 2
+sub
+push this 2
+push this 4
+push constant 2
+call Math.divide 2
+sub
+push constant 363
+push this 2
+push this 4
 push constant 2
 call Math.divide 2
 add
 call Screen.drawRectangle 4
 pop temp 0
+push constant 148
+push this 2
+push this 4
+push constant 2
+call Math.divide 2
+sub
+push this 1
+push constant 216
+sub
+push this 3
+push constant 2
+call Math.divide 2
+add
+push this 2
+push this 4
+push constant 2
+call Math.divide 2
+add
+call Screen.drawRectangle 4
+pop temp 0
+goto IF_END0
+label IF_FALSE0
+push this 1
+push this 3
+push constant 2
+call Math.divide 2
+sub
+push constant 148
+lt
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
+push this 1
+push this 3
+push constant 2
+call Math.divide 2
+sub
+push constant 216
+add
+push this 2
+push this 4
+push constant 2
+call Math.divide 2
+sub
+push constant 363
+push this 2
+push this 4
+push constant 2
+call Math.divide 2
+add
+call Screen.drawRectangle 4
+pop temp 0
+push constant 148
+push this 2
+push this 4
+push constant 2
+call Math.divide 2
+sub
+push this 1
+push this 3
+push constant 2
+call Math.divide 2
+add
+push this 2
+push this 4
+push constant 2
+call Math.divide 2
+add
+call Screen.drawRectangle 4
+pop temp 0
+goto IF_END1
+label IF_FALSE1
+push this 1
+push this 3
+push constant 2
+call Math.divide 2
+sub
+push this 2
+push this 4
+push constant 2
+call Math.divide 2
+sub
+push this 1
+push this 3
+push constant 2
+call Math.divide 2
+add
+push this 2
+push this 4
+push constant 2
+call Math.divide 2
+add
+call Screen.drawRectangle 4
+pop temp 0
+label IF_END1
+label IF_END0
 push constant 0
 return
-function Paddle.erase 0
+function Brick.erase 0
 push argument 0
 pop pointer 0
 push constant 0
 call Screen.setColor 1
 pop temp 0
-push this 0
+push this 1
+push this 3
+push constant 2
+call Math.divide 2
+sub
+push this 2
 push this 4
 push constant 2
 call Math.divide 2
 sub
 push this 1
-push this 5
-push constant 2
-call Math.divide 2
-sub
-push this 0
-push this 4
+push this 3
 push constant 2
 call Math.divide 2
 add
-push this 1
-push this 5
+push this 2
+push this 4
 push constant 2
 call Math.divide 2
 add
@@ -108,136 +210,28 @@ call Screen.drawRectangle 4
 pop temp 0
 push constant 0
 return
-function Paddle.moveLeftSim 0
+function Brick.getHitbox 0
 push argument 0
 pop pointer 0
-push this 0
-push constant 4
-sub
-pop this 2
-push this 6
-push this 2
-push this 4
-push constant 2
-call Math.divide 2
-sub
-push this 2
-push this 4
-push constant 2
-call Math.divide 2
-add
-push this 3
 push this 5
-push constant 2
-call Math.divide 2
-sub
-push this 3
-push this 5
-push constant 2
-call Math.divide 2
-add
-call Hitbox.update 5
-pop temp 0
-push constant 0
 return
-function Paddle.moveRightSim 0
+function Brick.moveRight 0
 push argument 0
 pop pointer 0
-push this 0
+push this 1
 push constant 4
 add
-pop this 2
-push this 6
-push this 2
-push this 4
-push constant 2
-call Math.divide 2
-sub
-push this 2
-push this 4
-push constant 2
-call Math.divide 2
-add
-push this 3
-push this 5
-push constant 2
-call Math.divide 2
-sub
-push this 3
-push this 5
-push constant 2
-call Math.divide 2
-add
-call Hitbox.update 5
-pop temp 0
-push constant 0
-return
-function Paddle.getHitbox 0
-push argument 0
-pop pointer 0
-push this 6
-return
-function Paddle.moveLeft 0
-push argument 0
-pop pointer 0
-push this 0
-push constant 4
-sub
-pop this 0
-push this 6
-push this 0
-push this 4
-push constant 2
-call Math.divide 2
-sub
-push this 0
-push this 4
-push constant 2
-call Math.divide 2
-add
+pop this 1
 push this 1
-push this 5
-push constant 2
-call Math.divide 2
-sub
+push constant 363
+gt
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push this 1
-push this 5
-push constant 2
-call Math.divide 2
-add
-call Hitbox.update 5
-pop temp 0
-push constant 0
-return
-function Paddle.moveRight 0
-push argument 0
-pop pointer 0
-push this 0
-push constant 4
-add
-pop this 0
-push this 6
-push this 0
-push this 4
-push constant 2
-call Math.divide 2
+push constant 216
 sub
-push this 0
-push this 4
-push constant 2
-call Math.divide 2
-add
-push this 1
-push this 5
-push constant 2
-call Math.divide 2
-sub
-push this 1
-push this 5
-push constant 2
-call Math.divide 2
-add
-call Hitbox.update 5
-pop temp 0
+pop this 1
+label IF_FALSE0
 push constant 0
 return
