--- a/project09/Breakaway/Wall.vm
+++ b/project09/Breakaway/Wall.vm
@@ -1,10 +1,10 @@
 function Wall.new 0
-push constant 8
+push constant 3
 call Memory.alloc 1
 pop pointer 0
 push constant 0
 pop this 0
-push constant 6
+push constant 20
 call Array.new 1
 pop this 1
 push pointer 0
@@ -21,16 +21,13 @@ function Wall.newBrick 0
 push argument 0
 pop pointer 0
 push this 0
+push this 1
+add
 push argument 1
 push argument 2
 push argument 3
 push argument 4
-call Brick.new 5
-pop this 2
-push this 0
-push this 1
-add
-push this 2
+call Brick.new 4
 pop temp 0
 pop pointer 1
 push temp 0
@@ -41,7 +38,94 @@ add
 pop this 0
 push constant 0
 return
-function Wall.draw 2
+function Wall.destroyBrick 1
+push argument 0
+pop pointer 0
+push argument 1
+pop local 0
+label WHILE_EXP0
+push local 0
+push this 0
+push constant 1
+sub
+lt
+not
+if-goto WHILE_END0
+push local 0
+push this 1
+add
+push local 0
+push constant 1
+add
+push this 1
+add
+pop pointer 1
+push that 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+push local 0
+push constant 1
+add
+pop local 0
+goto WHILE_EXP0
+label WHILE_END0
+push this 0
+push constant 1
+sub
+pop this 0
+push constant 0
+return
+function Wall.newBrickGroup 2
+push argument 0
+pop pointer 0
+push constant 0
+pop local 0
+label WHILE_EXP0
+push local 0
+push argument 7
+lt
+not
+if-goto WHILE_END0
+push constant 0
+pop local 1
+label WHILE_EXP1
+push local 1
+push argument 8
+lt
+not
+if-goto WHILE_END1
+push pointer 0
+push argument 1
+push local 1
+push argument 5
+call Math.multiply 2
+add
+push argument 2
+push local 0
+push argument 6
+call Math.multiply 2
+add
+push argument 3
+push argument 4
+call Wall.newBrick 5
+pop temp 0
+push local 1
+push constant 1
+add
+pop local 1
+goto WHILE_EXP1
+label WHILE_END1
+push local 0
+push constant 1
+add
+pop local 0
+goto WHILE_EXP0
+label WHILE_END0
+push constant 0
+return
+function Wall.draw 1
 push argument 0
 pop pointer 0
 push constant 0
@@ -61,8 +145,8 @@ push this 1
 add
 pop pointer 1
 push that 0
-pop local 1
-push local 1
+pop this 2
+push this 2
 call Brick.draw 1
 pop temp 0
 push local 0
@@ -73,7 +157,7 @@ goto WHILE_EXP0
 label WHILE_END0
 push constant 0
 return
-function Wall.erase 2
+function Wall.erase 1
 push argument 0
 pop pointer 0
 push constant 0
@@ -92,8 +176,8 @@ push this 1
 add
 pop pointer 1
 push that 0
-pop local 1
-push local 1
+pop this 2
+push this 2
 call Brick.erase 1
 pop temp 0
 push local 0
@@ -104,7 +188,7 @@ goto WHILE_EXP0
 label WHILE_END0
 push constant 0
 return
-function Wall.moveRight 2
+function Wall.moveRight 1
 push argument 0
 pop pointer 0
 push constant 0
@@ -120,8 +204,8 @@ push this 1
 add
 pop pointer 1
 push that 0
-pop local 1
-push local 1
+pop this 2
+push this 2
 call Brick.moveRight 1
 pop temp 0
 push local 0
@@ -132,8 +216,72 @@ goto WHILE_EXP0
 label WHILE_END0
 push constant 0
 return
+function Wall.moveLeft 1
+push argument 0
+pop pointer 0
+push constant 0
+pop local 0
+label WHILE_EXP0
+push local 0
+push this 0
+lt
+not
+if-goto WHILE_END0
+push local 0
+push this 1
+add
+pop pointer 1
+push that 0
+pop this 2
+push this 2
+call Brick.moveLeft 1
+pop temp 0
+push local 0
+push constant 1
+add
+pop local 0
+goto WHILE_EXP0
+label WHILE_END0
+push constant 0
+return
+function Wall.getBrick 0
+push argument 0
+pop pointer 0
+push argument 1
+push this 1
+add
+pop pointer 1
+push that 0
+return
+function Wall.getCount 0
+push argument 0
+pop pointer 0
+push this 0
+return
 function Wall.getHitbox 0
 push argument 0
 pop pointer 0
-push this 7
+push argument 1
+push this 1
+add
+pop pointer 1
+push that 0
+pop this 2
+push this 2
+call Brick.getHitbox 1
+return
+function Wall.isDestroyed 1
+push argument 0
+pop pointer 0
+push this 0
+push constant 0
+eq
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push constant 0
+not
+pop local 0
+label IF_FALSE0
+push local 0
 return
