--- a/project11/TestPrograms/ConvertToBin/Main.vm
+++ b/project11/TestPrograms/ConvertToBin/Main.vm
@@ -1,3 +1,4 @@
+{'result': ('int', 'var', 0), 'this': ('Main', 'argument', 0), 'value': ('int', 'var', 1)}
 function Main.main 2
 push constant 8001
 push constant 16
@@ -5,43 +6,73 @@ push constant 1
 call Main.fillMemory 3
 push constant 8000
 call Memory.peek 1
+pop local 1
+push local 1
 call Main.convert 1
 return
+{'mask': ('int', 'var', 0), 'this': ('Main', 'argument', 0), 'position': ('int', 'var', 1), 'value': ('int', 'argument', 1)}
+{'mask': ('int', 'var', 0), 'this': ('Main', 'argument', 0), 'loop': ('boolean', 'var', 2), 'position': ('int', 'var', 1), 'value': ('int', 'argument', 1)}
 function Main.convert 3
 push constant 1
+neg
+pop local 2
+push local 2
+push local 1
+push constant 1
 add
+pop local 1
+push local 0
 call Main.nextMask 1
+pop local 0
 push constant 9000
+push local 1
 add
+push local 0
 call Memory.poke 2
+push local 1
 push constant 16
 gt
+push argument 1
+push local 0
 and
 push constant 0
 eq
 push constant 8000
+push local 1
 add
 push constant 1
 call Memory.poke 2
 push constant 8000
+push local 1
 add
 push constant 0
 call Memory.poke 2
+push constant 0
+pop local 2
 return
 function Main.nextMask 0
+push argument 1
 push constant 0
 eq
 push constant 1
 return
+push argument 1
 push constant 2
 call Math.multiply 2
 return
 function Main.fillMemory 0
+push argument 2
 push constant 0
 gt
+push argument 1
+push argument 3
 call Memory.poke 2
+push argument 2
 push constant 1
 sub
+pop argument 2
+push argument 1
 push constant 1
 add
+pop argument 1
 return
