Add: Handle the OO constructs of the Jack language
Changed compilation of subroutines and subroutine calls to work with the
object-oriented constructs of the Jack language, like:
-constructors
-methods
-fields
-expressions that include method calls
<<<
a. Added code to CompilationEngine.compileSubroutine() to write VM code
for (1) constructors (allocate memory for the new object and set
pointer[0] to the base address of the new object) and (2) methods (the
first argument should a reference to the object on which the method is
supposed to operate - set pointer[0] to that reference)
b. Added code CompilationEngine.compileTerm() to translate the Jack
keyword "this" to the VM code to push pointer[0] onto the stack
c. Modified CompilationEngine.compileSubroutineCall() to properly set up
subroutine calls of any of the three ways defined in the grammar
(subroutineName(), className.subroutineName(), or
varName.subroutineName())
>>>

Refactoring to uncouple xml writing logic from symbol table updating logic
<<<
[All methods are in class CompilationEngine]
a. Extracted method writeIdentifierInfo() from
writeXmlTerminalIdentifier()
b. Changed method name writeXmlTerminalIdentifier() to updateSymbolTable()
c. Added new method processTerminal() that makes calls to
writeXmlTerminal() and updateSymbolTable()
d. Removed calls to updateSymbolTable() from writeXmlTerminal()
e. Changed writeXmlTerminal() to accept parameters tokenType and
tokenValue, so it can be called with stored token readings
f. Replaced many calls to writeXmlTerminal() with calls to
processTerminal()
>>>

Small misc. changes
<<<
a. CompilationEngine.compileVarDec() - moved some setIdentifierXXX() calls
into an else branch
b. Fixed message mistake in VMWriter.writePop()
>>>

Terminology Clarification
reference == address (i.e. address of a 16-bit word)
value == bits at address (i.e. the 16-bit word of a certain address)
& also: reference of object == base address of object

PASSED TESTS:
Seven
ConvertToBin
Square

--- a/project11/TestPrograms/ConvertToBin/Main.vm
+++ b/project11/TestPrograms/ConvertToBin/Main.vm
@@ -1,6 +1,7 @@
 function Main.main 2
 push constant 8000
-push constant 127
+push constant 11
+neg
 call Memory.poke 2
 pop temp 0
 push constant 8001
